--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,28 +1,44 @@
 name: Run tests
- 
-on: [push, pull_request]
- 
+
+on:
+  push:
+    branches: [ main]
+  pull_request:
+    branches: [ main]
+    paths:
+      - '**.php'
+
 jobs:
   tests:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
- 
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
+          php-version: '8.3.11'
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
           coverage: none
- 
+
+      - name: Cache Composer packages
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
       - name: Run composer install
-        run: composer install -n --prefer-dist
- 
+        run: |
+          composer config --no-plugins
+          composer install --no-interaction --prefer-dist --no-progress --no-suggest
+
       - name: Prepare Laravel Application
         run: |
           cp .env.ci .env
           php artisan key:generate
- 
+
       - name: Run tests
         run: php artisan test
