--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,17 +1,10 @@
 includes:
     - vendor/larastan/larastan/extension.neon
-    - vendor/nesbot/carbon/extension.neon
-
 parameters:
-
     paths:
         - app/
-
-    # Level 10 is the highest level
+        - routes/
+        - config/
+        - database/
+        - tests/
     level: 5
-
-#    ignoreErrors:
-#       - '#PHPDoc tag @var#'
-#
-#    excludePaths:
-#        - ./*/*/FileToBeExcluded.php
