--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,8 +1,6 @@
-name: Run Static Analysis
+name: Static Analysis
 
 on:
-  push:
-    branches: [main]
   pull_request:
     branches: [main]
     paths:
