YML file name changed

--- a/.github/workflows/my_static_analysis.yml
+++ b/.github/workflows/my_static_analysis.yml
@@ -1,4 +1,6 @@
-name: Run Static Analysis of Lara Action
+name: "My Static Analysis"
+
+run-name: Run Static Analysis of Lara Action
 
 on:
   pull_request:
