--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -1,14 +1,16 @@
-name: "My PHPUnit Tests"
-
-run-name: Run PHPUnit Tests of Lara Action
+name: Run tests
 
 on:
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
+    paths:
+      - '**.php'
 
 jobs:
   tests:
-    name: Run tests
+    name: Run PHPUnit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,6 +21,14 @@ jobs:
           php-version: '8.3'
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
           coverage: none
+
+      - name: Cache Composer packages
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
 
       - name: Run composer install
         run: composer install --no-interaction --prefer-dist --no-progress
